--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@stomp/stompjs": "^6.1.0",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.5",
+    "angular-socket-io": "^0.7.0",
+    "bootstrap": "^5.0.2",
+    "net": "^1.0.2",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
